--- a/src/components/LandingPage/section3/section3.css
+++ b/src/components/LandingPage/section3/section3.css
@@ -66,7 +66,7 @@
         align-items: center;
         justify-content: center;
         width: 100%;
-        height: 70vh;
+        height: 100vh;
       }
       
       .outer {
@@ -93,34 +93,34 @@
         transition: color 1s, font-size 1s;
         margin-right: 20px;
         font-weight: 600;
-        align-items: center;
-        justify-content: center;
         
       }
       
       .name.active {
         color: #000;
-        font-size: 3.5vh; 
+        font-size: 3.1vh; 
         font-family: "Manrope";
         font-weight: 900;
-        align-items: center;
-        justify-content: center;
+
       }
       
       .description {
         flex-grow: 1;
-        padding-left: 25vh;
-        font-size: 2.1vh;
-        font-family: "Montserrat-med"; 
-        align-items: center;
-        justify-content: center;
-        margin-left: 4vh;
-      }
+        padding-left: 5vh; /* Remove padding-left for centering */
+        margin-left: 20vh; /* Remove margin-left for centering */
+        font-size: 2vh; /* Adjust font size as needed */
+        font-family: "Montserrat-med";
+        line-height: 1.3; /* Adjust line height for better readability */
+        text-align: center; /* Center the text */
+        margin-top: 0vh; /* Add margin-top if needed for spacing */
+        margin-bottom: 2vh; /* Add margin-bottom if needed for spacing */
+    }
+    
       .heading_help{
-        font-size: 12px;
-        margin-left: 35vh;
+        font-size: 14px;
+        margin-left: 16vh;
         font-weight: 600;
-        margin-top: 3vh;
+        margin-top: 3.3vh;
         font-family: "Montserrat-med";
     }
 }
