--- a/src/components/LandingPage/section3/section3.css
+++ b/src/components/LandingPage/section3/section3.css
@@ -81,9 +81,9 @@
       }
       .description {
         flex-grow: 1;
-        margin-left:20vh;
+        margin-left:18vh;
         padding-left: 20px;
-        font-size: 2.1vh;
+        font-size: 2vh;
         font-family: "Montserrat-med"; 
       }
       .name {
@@ -91,7 +91,7 @@
         color: #aaa;
         font-family: "Manrope";
         transition: color 1s, font-size 1s;
-        margin-right: 20px;
+        margin-right: 40px;
         font-weight: 600;
         
       }
@@ -107,12 +107,11 @@
       .description {
         flex-grow: 1;
         padding-left: 5vh; /* Remove padding-left for centering */
-        margin-left: 20vh; /* Remove margin-left for centering */
-        font-size: 2vh; /* Adjust font size as needed */
+        margin-left: 18vh; /* Remove margin-left for centering */
+        font-size: 16px; /* Adjust font size as needed */
         font-family: "Montserrat-med";
         line-height: 1.3; /* Adjust line height for better readability */
         text-align: center; /* Center the text */
-        margin-top: 0vh; /* Add margin-top if needed for spacing */
         margin-bottom: 2vh; /* Add margin-bottom if needed for spacing */
     }
     
