--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -111,7 +111,7 @@ body {
   }
 
   #space-button1 {
-    margin-left: 20%;
+    margin-left: 12vh;
     margin-top: 18vh;
     padding: 2vh 2vh;
   }
