--- a/src/components/LandingPage/testimonial/testimonial.css
+++ b/src/components/LandingPage/testimonial/testimonial.css
@@ -17,7 +17,7 @@
   padding: 60px 0;
   background: white;
   position: relative;
-  background-color: #E5F1F7;
+  background-color: #F3F8FC;
   overflow: hidden;
 }
 
